Kotlin削除 Java14のtextblockに切り替え